--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -16,11 +16,20 @@
 			"problemMatcher": [
 				"$rustc"
 			],
+			"group": "build",
+			"label": "rust: cargo check"
+		},
+		{
+			"type": "cargo",
+			"command": "run",
+			"problemMatcher": [
+				"$rustc"
+			],
+			"label": "rust: cargo run",
 			"group": {
 				"kind": "build",
 				"isDefault": true
-			},
-			"label": "rust: cargo check"
+			}
 		}
 	]
 }
