--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,4 +9,5 @@ edition = "2021"
 clap = { version = "4.4.4", features = ["derive"] }
 colored = "2.0.4"
 crossterm = "0.27.0"
+lazy_static = "1.4.0"
 petgraph = "0.6.4"
