--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -3,15 +3,6 @@
 	"tasks": [
 		{
 			"type": "cargo",
-			"command": "run",
-			"problemMatcher": [
-				"$rustc"
-			],
-			"label": "rust: cargo run",
-			"group": "build"
-		},
-		{
-			"type": "cargo",
 			"command": "check",
 			"problemMatcher": [
 				"$rustc"
@@ -29,7 +20,8 @@
 			"group": {
 				"kind": "build",
 				"isDefault": true
-			}
+			},
+			"args": ["--", "--auto"]
 		}
 	]
 }
