--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 clap = { version = "4.4.4", features = ["derive"] }
 colored = "2.0.4"
 crossterm = "0.27.0"
+ctrlc = "3.4.1"
 lazy_static = "1.4.0"
 multimap = "0.9.0"
 petgraph = "0.6.4"
